<resources>
    <string name="app_name">RickAndMortyAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings From Home -->
    <string name="description_image">Imagem sem legenda</string>
    <string name="text_name">Nome</string>
    <string name="text_status">Status</string>
    <string name="text_last_location">Última localização conhecida:</string>
    <string name="text_location">Localização</string>
    <string name="text_first_seen_in">Visto pela primeira vez em:</string>
    <string name="text_seen_in">Visto em</string>
    <string name="text_species">Espécie</string>
    <string name="text_rick_and_morty_api">The Rick and Morty API</string>
    <string name="text_pages">Pagina</string>
    <string name="text_next_pages">Proximo</string>
    <string name="text_back_pages">Anterior</string>
    <string name="text_route_name">Nome da rota</string>

</resources>